--- a/style.css
+++ b/style.css
@@ -140,8 +140,7 @@
 
     #section2 {
         width: 100%;
-        height: 100vh;
-        padding-top: 10vh;
+        height: 80vh;
     }
 
     .about-me {
@@ -188,12 +187,12 @@
 
     #section3 {
         height: auto;
-        padding-top: 10vh;
+        padding-top: 5vh;
     }
 
     .container-cards {
         flex-wrap: wrap;
-        margin-left: 5%;
+        
     }
 
     .card-title {
@@ -208,7 +207,10 @@
 
     .container-cards2 {
         flex-wrap: wrap;
-        margin-left: 5%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
     }
 
     .card .fa-solid {
